Fixed #1440. Fixed issue where auto-play button is not visible when in small player size.'

--- a/src/.styles/general.css
+++ b/src/.styles/general.css
@@ -1,3 +1,7 @@
+div#page.watch-non-stage-mode #watch-appbar-playlist.watch-playlist.radio-playlist .playlist-videos-list {
+  top: 100px;
+}
+
 body.ytcenter-hide-footer #footer-container {
   display: none;
 }
